# zero-to-production-in-rust

./: Cargo.toml  Dockerfile  cloudbuild.yaml  sqlx-data.json
migrations/: 20221027020258_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
zero2prod/src/: main.rs
